modified:   README.md 	modified:   defaults/main.yml 	modified:   tasks/RedHat.yml 	modified:   tasks/auto-unseal.yml 	modified:   tasks/backup.yml 	modified:   tasks/certificates.yml 	modified:   tasks/configureation.yml 	deleted:    tasks/install.yml 	modified:   tasks/main.yml 	modified:   tasks/register.yml 	modified:   templates/vault.hcl.j2 	deleted:    templates/vault.service.j2 	modified:   templates/vault_backup.sh.j2 	modified:   templates/vault_unseal.sh.j2 	modified:   vars/RedHat.yml 	modified:   vars/main.yml

--- a/templates/vault.hcl.j2
+++ b/templates/vault.hcl.j2
@@ -22,7 +22,7 @@ listener "tcp" {
   tls_disable_client_certs = "true"
 {% endif %}
   telemetry {
-    unauthenticated_metrics_access = true
+    unauthenticated_metrics_access = "true"
   }
 }
 
